@@ -1165,10 +1165,13 @@ class SvnRepository(ForeignRepository):
                            revision_id=None):
         """See Repository.get_commit_builder()."""
         from bzrlib.plugins.svn.commit import SvnCommitBuilder
+        append_revisions_only = self.get_config().get_append_revisions_only()
+        if append_revisions_only is None:
+            append_revisions_only = True
         return SvnCommitBuilder(self, branch.get_branch_path(), parents, 
                                 config, timestamp, timezone, committer, 
                                 revprops, revision_id, 
-                                append_revisions_only=True)
+                                append_revisions_only=append_revisions_only)
 
     def find_fileprop_paths(self, layout, from_revnum, to_revnum, 
                                project=None, check_removed=False):
